# amigo-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: ci.yml
agent/: Dockerfile  README.md  pyproject.toml
agent/data/psychology_guides/: diretrizes_eticas.md  escuta_ativa.md  primeiros_socorros.md
agent/examples/: live_chat.py
agent/src/: __init__.py  graph.py  main.py  schemas.py
agent/src/compliance/: validation_policy.yaml
agent/src/core/: config.py  logger.py  memory.py
agent/src/graph/: main_graph.py
agent/src/graph/subgraphs/: __init__.py  hitl_graph.py  rag_graph.py  retrieval.py  routing.py
agent/src/llm/: __init__.py  wrapper.py
agent/src/nodes/: generator.py  guardrails.py  intent_analysis.py  judge.py
agent/src/state/: node_schemas.py  schema.py  state.py
agent/src/tools/: routing_signal.py  vector_store.py
assets/: .gitkeep
backend/: .golangci.yml  Dockerfile  go.mod  go.sum
backend/cmd/api/: main.go
backend/internal/websocket/: client.go  hub.go
docs/: AGENT_ARCHITECTURE.md  ARCHITECTURE.md  CONTRACT.md  DEVELOPMENT.md
frontend/: next.config.js  package.json
frontend/src/hooks/: useChat.ts
infra/: docker-compose.yml
